<resources>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="confirm_recommandation_face_is">" "<Data> Sure this is &lt;font color=#323232>&lt;b>%1$s&lt;/b>&lt;/font>? This person will be moved to \"%2$s\" album. </Data>" "</string>
    <string name="confirm_recommandation_face_not">" "<Data>" Sure this isn't &lt;font color=#323232>&lt;b>%1$s&lt;/b>&lt;/font>? "</Data>" "</string>
    <string name="confirm_recommandation_multiple_faces_are">" "<Data> Sure these are &lt;font color=#323232>&lt;b>%1$s&lt;/b>&lt;/font>? These people will be moved to \"%2$s\" album. </Data>" "</string>
    <string name="confirm_recommandation_multiple_faces_not">" "<Data>" Sure these aren't &lt;font color=#323232>&lt;b>%1$s&lt;/b>&lt;/font>? "</Data>" "</string>
    <string name="accept">Accept</string>
    <string name="accept_or_deny">%1$s shared the album %2$s with you.</string>
    <string name="actionbar_overflow_item_desc">More options</string>
    <string name="add_automatically_alert_msg">Add photos from \"%1$s\" to this album automatically?</string>
    <string name="add_automatically_alert_title">Add photos automatically</string>
    <string name="add_secret_ensure_title">Hide</string>
    <string name="add_sharer">Add member</string>
    <string name="add_to_album">Add to album</string>
    <string name="add_to_album_bulk_result">Error (%d)</string>
    <string name="add_to_album_exist">This photo already exists</string>
    <string name="add_to_album_failed">"Couldn't add to album"</string>
    <string name="add_to_album_failed_with_reason">"Can't add to album. %1$s."</string>
    <string name="add_to_album_success">Added to album</string>
    <string name="add_to_album_tip">Cloud photos</string>
    <string name="add_to_favorites_failed">"Couldn't add to favorites"</string>
    <string name="add_to_secret_exist">Photo already exists in hidden album</string>
    <string name="add_to_secret_fail">"Couldn't add to hidden album"</string>
    <string name="add_to_secret_failed_with_reason">"Can't add to hidden album. %1$s."</string>
    <string name="add_to_secret_successful">Added to hidden album</string>
    <string name="add_to_share_album_not_delete">"Can't delete photo from Shared Album"</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="added_to_favorites_desc">Added to favorites</string>
    <string name="added_to_favorites_tip">Added to \"Favorites\" album</string>
    <string name="adding">Adding…</string>
    <string name="adding_recipients">Adding recipients…</string>
    <string name="adding_to_album">Adding photos…</string>
    <string name="adding_to_favorites">Adding to favorites…</string>
    <string name="adjust_brightness">Brightness</string>
    <string name="adjust_contrast">Contrast</string>
    <string name="adjust_saturation">Saturation</string>
    <string name="adjust_sharpen">Sharpen</string>
    <string name="adjust_vignette">Vignette</string>
    <string name="agreement_agree">Accept</string>
    <string name="agreement_optional_tip">(Optional)</string>
    <string name="agreement_quit">Exit</string>
    <string name="agreement_required_tip">(Mandatory)</string>
    <string name="agreement_summary">Legal documents</string>
    <string name="ai_album_open_switch_button_title">Start analyzing photos</string>
    <string name="ai_album_requesting_title">AI algorithm is still processing your photos. Come back in a while.</string>
    <string name="ai_album_setting_sub_title">Allow AI algorithm to identify people, places, and objects on your photos so you could find them faster.</string>
    <string name="ai_album_setting_title">Identify objects on photos</string>
    <string name="album_already_exists_check">View</string>
    <string name="album_already_exists_msg">Album \"%s\" already exists</string>
    <string name="album_already_forced_top">Already on top</string>
    <string name="album_bluetooth">Bluetooth</string>
    <string name="album_camera_name">Camera</string>
    <string name="album_creative">My edited photos</string>
    <string name="album_detail_page_empty">No photos or videos</string>
    <string name="album_download">Downloads</string>
    <string name="album_faces_name">People</string>
    <string name="album_favorites_name">Favorites</string>
    <string name="album_from_format">From %s</string>
    <string name="album_jump_failed">Wait until albums are synced with Mi Cloud ​​and try again</string>
    <string name="album_member">Album members %s</string>
    <string name="album_midrop">Mi Drop</string>
    <string name="album_name">Album name</string>
    <string name="album_name_locations">Locations</string>
    <string name="album_name_people">People</string>
    <string name="album_name_recent_discovery">Recent</string>
    <string name="album_name_tags">Tags</string>
    <string name="album_notes">Notes</string>
    <string name="album_others_share_baby_info_format">Baby album from %s</string>
    <string name="album_others_share_info_format">From %s</string>
    <string name="album_owner_share">Shared</string>
    <string name="album_page_empty">Empty</string>
    <string name="album_page_label">Albums</string>
    <string name="album_pano_name">Panoramas</string>
    <string name="album_quota_fulfiled">Too many albums. Delete some albums and try again.</string>
    <string name="album_scanner">Scanner</string>
    <string name="album_screen_recorder">Screen recorder</string>
    <string name="album_screenshot_name">Screenshots</string>
    <string name="album_share_exit_confirm">Exit this album?</string>
    <string name="album_share_kicked">%1$s is closed</string>
    <string name="album_share_stat_content">Invitations</string>
    <string name="album_share_subtitle_accepting">Accepting invitation from %1$s…</string>
    <string name="album_share_subtitle_denying">Ignoring invitation from %1$s…</string>
    <string name="album_share_subtitle_invited">Shared by %1$s</string>
    <string name="album_share_subtitle_normal">Shared by %1$s</string>
    <string name="album_share_subtitle_not_ready">Missing album info</string>
    <string name="album_share_subtitle_quitting">Exiting…</string>
    <string name="album_share_subtitle_requesting">Getting album info…</string>
    <string name="album_share_title_new_album">Share new album</string>
    <string name="album_show_local_only">Only show local albums</string>
    <string name="album_show_local_only_summary">Turn on to view and delete photos on your device only</string>
    <string name="album_type_baby">Baby album</string>
    <string name="album_type_share">Shared albums</string>
    <string name="album_type_system">System albums</string>
    <string name="album_videos_name">Videos</string>
    <string name="album_wallpaper">Wallpapers</string>
    <string name="alert_secret_album_enter">Got it</string>
    <string name="alert_secret_album_message">Swipe down while in the Albums tab to view hidden album.</string>
    <string name="alert_secret_album_message_lower_case">  swipe down in Albums to view</string>
    <string name="alert_secret_album_title">How to view hidden album</string>
    <string name="alert_selection_description">MIUI will analyze similar photos and mark best shots for you.</string>
    <string name="alert_selection_title">Select best shot</string>
    <string name="all_faces">Photos with this person</string>
    <string name="all_items_synced">All albums have been backed up to Mi Cloud</string>
    <string name="all_video_album_display_name">All videos</string>
    <string name="already_create_baby_album">Baby album already exists in Mi Cloud.</string>
    <string name="and"> and </string>
    <string name="app_is_launching">%s is launching…</string>
    <string name="app_is_launching_common">Launching app…</string>
    <string name="app_name">Gallery</string>
    <string name="app_name_view_picture">View photos</string>
    <string name="app_name_view_video">View videos</string>
    <string name="associate_face_album">Choose an album</string>
    <string name="auto_backup_introduce">Back up photos and videos automatically (Mi Account is required)</string>
    <string name="auto_download_media_title">Download photos from Mi Cloud automatically</string>
    <string name="auto_update_face">Add photos automatically</string>
    <string name="auto_update_face_summary">Automatically match and add photos to Baby album</string>
    <string name="auto_update_off">Off</string>
    <string name="auto_update_on">On</string>
    <string name="auto_upload_before_share_message">Back up this album to Mi Cloud before sharing</string>
    <string name="auto_upload_before_share_title">Hint</string>
    <string name="baby_birthday">Birthday</string>
    <string name="baby_nick_name">Nickname</string>
    <string name="baby_sexy">Gender</string>
    <string name="backup_automatically_summary">Back up photos and videos from all devices to Mi Cloud. Thus, you can conveniently browse, sort, edit, and share photos and videos on all your devices.</string>
    <string name="backup_automatically_title">Back up automatically</string>
    <string name="backup_only_in_wifi">Only use Wi‑Fi to back up photos and videos</string>
    <string name="backup_only_in_wifi_summary">Never use mobile data to back up photos or videos</string>
    <string name="browse_category_title">Browse</string>
    <string name="cleaner_scan_ok">Got it</string>
    <string name="cloud_settings">Gallery backups</string>
    <string name="collage_choose">Select</string>
    <string name="collage_mirror">Mirror</string>
    <string name="collage_rotate">Rotate</string>
    <string name="download_type_title">Download quality</string>
    <string name="enable_face_album_summary">Automatically sort photos by the people that are in them</string>
    <string name="enable_face_album_title">Sort by people</string>
    <string name="impunity_declaration_settings">Internet connection notification</string>
    <string name="impunity_declaration_summary">Show internet connection notification every time you open Gallery</string>
    <string name="movie_return">Back</string>
    <string name="movie_save">Save</string>
    <string name="movie_tab_edit">Edit</string>
    <string name="movie_tab_music">Music</string>
    <string name="movie_tab_template">Template</string>
    <string name="movie_video_long">Longer video</string>
    <string name="movie_video_short">10s video</string>
    <string name="open_public_message">Create URL to share with your friends</string>
    <string name="open_public_title">Share</string>
    <string name="other_settings">Additional settings</string>
    <string name="request_qr_code_failed">"Couldn't get QR code"</string>
    <string name="retry_to_request_qr_code">Try again</string>
    <string name="scan_qr_code_buttom_text">Scan QR code to view this album</string>
    <string name="send_public_url">Send album URL</string>
    <string name="share_album">Share album</string>
    <string name="share_album_qr_code">"Album's QR code"</string>
    <string name="show_hidden_album_title">Show invisible albums</string>
    <string name="slideshow_interval_dialog_title">Enter interval</string>
    <string name="slideshow_interval_title">Show each slide for</string>
    <string name="text_edit_dialog_style_align_left">Left</string>
    <string name="text_edit_dialog_style_bold">Bold</string>
    <string name="text_edit_dialog_style_color">"Color  "</string>
    <string name="text_edit_dialog_style_shadow">Shadow</string>
    <string name="text_edit_dialog_style_transparent">Opacity</string>
    <string name="trash_bin">Trash bin</string>
    <string name="trash_bin_summary">Browse backed up photos which were deleted recently</string>
    <string name="user_agreement4">Privacy Policy</string>
    <string name="you_are">"You're the baby's"</string>
</resources>