<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/share_album"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:key="sharers">
        <com.miui.gallery.share.GridPreference android:persistent="false" android:key="sharer_grid" />
        <com.miui.gallery.share.QRPreference android:persistent="false" android:key="qr_code" />
    </PreferenceCategory>
    <PreferenceCategory android:key="public_share">
        <CheckBoxPreference android:persistent="false" android:title="@string/open_public_title" android:key="open_public_share" android:summary="@string/open_public_message" />
        <PreferenceScreen android:persistent="false" android:title="@string/send_public_url" android:key="send_public_url" />
    </PreferenceCategory>
</PreferenceScreen>