<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:orientation="vertical" android:id="@id/layout_controller" android:background="@color/movie_bottom_panel_background" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="@dimen/movie_controller_height" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@id/radio_group_controller" android:layout_width="fill_parent" android:layout_height="@dimen/movie_tab_height" app:layout_constrainedHeight="true" app:layout_constraintTop_toTopOf="parent">
        <RadioButton android:id="@id/radio_button_template" android:checked="true" android:text="@string/movie_tab_template" style="@style/movieRadioButton" />
        <RadioButton android:id="@id/radio_button_music" android:text="@string/movie_tab_music" style="@style/movieRadioButton" />
        <RadioButton android:id="@id/radio_button_edit" android:text="@string/movie_tab_edit" style="@style/movieRadioButton" />
    </RadioGroup>
    <include android:id="@id/divide_top" android:layout_width="fill_parent" android:layout_height="@dimen/movie_divide_height" app:layout_constrainedHeight="true" app:layout_constraintTop_toBottomOf="@id/radio_group_controller" layout="@layout/movie_divide" />
    <com.miui.gallery.movie.ui.view.NoScrollViewPager android:id="@id/view_pager" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constrainedHeight="true" app:layout_constraintBottom_toTopOf="@id/divide_bottom" app:layout_constraintTop_toBottomOf="@id/divide_top" />
    <include android:id="@id/divide_bottom" android:layout_width="fill_parent" android:layout_height="@dimen/movie_divide_height" app:layout_constrainedHeight="true" app:layout_constraintBottom_toTopOf="@id/btn_movie_return" layout="@layout/movie_divide" />
    <TextView android:textSize="@dimen/movie_tab_size" android:textColor="@color/movie_tab_normal" android:gravity="center" android:id="@id/btn_movie_return" android:layout_width="wrap_content" android:layout_height="@dimen/movie_bottom_height" android:text="@string/movie_return" android:paddingStart="@dimen/movie_bottom_text_margin" android:paddingEnd="@dimen/movie_bottom_text_margin" app:layout_constrainedHeight="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@id/duration_group_controller" android:layout_width="wrap_content" android:layout_height="@dimen/movie_bottom_height" app:layout_constrainedHeight="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <RadioButton android:id="@id/radio_button_video_short" android:checked="true" android:text="@string/movie_video_short" style="@style/smallMovieRadioButton" />
        <RadioButton android:id="@id/radio_button_video_long" android:text="@string/movie_video_long" style="@style/smallMovieRadioButton" />
    </RadioGroup>
    <TextView android:textSize="@dimen/movie_tab_size" android:textColor="@color/movie_tab_normal" android:gravity="center" android:id="@id/btn_movie_save" android:layout_width="wrap_content" android:layout_height="@dimen/movie_bottom_height" android:text="@string/movie_save" android:paddingStart="@dimen/movie_bottom_text_margin" android:paddingEnd="@dimen/movie_bottom_text_margin" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>