<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_gravity="center" android:id="@id/qr_code_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vertical_spacing_big">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/qr_code_error" android:background="@drawable/qr_error_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/request_qr_code_failed" style="@style/Gallery.TextAppearance.Info.Tip" />
            <TextView android:gravity="center" android:id="@id/retry_btn" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/retry_to_request_qr_code" style="@style/Gallery.TextAppearance.Info.Tip" />
        </LinearLayout>
        <FrameLayout android:id="@id/qr_code_requesting" android:background="@drawable/qr_error_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ProgressBar android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/qr_code_image" android:background="@color/share_album_qr_code_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@string/share_album_qr_code" />
    </FrameLayout>
    <TextView android:gravity="center" android:paddingTop="@dimen/vertical_spacing_big" android:paddingBottom="@dimen/vertical_spacing_huge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/scan_qr_code_buttom_text" />
</LinearLayout>