<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@drawable/collage_icon_edit_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/replace" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/collage_icon_replace" android:scaleType="fitCenter" android:contentDescription="@string/collage_choose" android:paddingStart="@dimen/collage_dialog_item_padding" android:paddingEnd="@dimen/collage_dialog_item_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/rotate" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/rotate" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/collage_icon_rotate" android:scaleType="fitCenter" android:contentDescription="@string/collage_rotate" android:paddingStart="@dimen/collage_dialog_item_padding" android:paddingEnd="@dimen/collage_dialog_item_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/mirror" app:layout_constraintStart_toEndOf="@id/replace" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/mirror" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/collage_icon_mirror" android:scaleType="fitCenter" android:contentDescription="@string/collage_mirror" android:paddingStart="@dimen/collage_dialog_item_padding" android:paddingEnd="@dimen/collage_dialog_item_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/rotate" app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>