<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.Guideline android:orientation="horizontal" android:id="@id/guideline_horizontal_25" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.25" />
    <android.support.constraint.Guideline android:orientation="horizontal" android:id="@id/guideline_horizontal_50" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <android.support.constraint.Guideline android:orientation="horizontal" android:id="@id/guideline_horizontal_75" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.75" />
    <android.support.constraint.Guideline android:orientation="vertical" android:id="@id/guideline_vertical_18" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.18" />
    <android.support.constraint.Guideline android:orientation="vertical" android:id="@id/guideline_vertical_50" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <android.support.constraint.Guideline android:orientation="vertical" android:id="@id/guideline_vertical_82" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.82" />
    <TextView android:textSize="@dimen/text_edit_dialog_tab_text_size" android:textColor="@color/text_edit_dialog_tab_menu_text" android:id="@id/text_edit_dialog_tab_style_color_picker_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_dialog_style_color" app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_25" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.12" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/guideline_horizontal_25" />
    <com.miui.gallery.editor.photo.widgets.seekbar.ColorPicker android:id="@id/text_edit_dialog_tab_style_color_picker" android:paddingTop="@dimen/photo_editor_seekbar_padding_top" android:paddingBottom="@dimen/photo_editor_seekbar_padding_top" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxHeight="@dimen/color_seekbar_height" android:minHeight="@dimen/color_seekbar_height" android:paddingStart="@dimen/photo_editor_seekbar_padding_start" android:paddingEnd="@dimen/photo_editor_seekbar_padding_end" app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_25" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/text_edit_dialog_tab_style_color_picker_title" app:layout_constraintTop_toTopOf="@id/guideline_horizontal_25" />
    <TextView android:textSize="@dimen/text_edit_dialog_tab_text_size" android:textColor="@color/text_edit_dialog_tab_menu_text" android:id="@id/text_edit_dialog_tab_style_transparent_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_dialog_style_transparent" app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_50" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.12" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/guideline_horizontal_50" />
    <SeekBar android:id="@id/text_edit_dialog_tab_style_transparent" android:paddingTop="@dimen/photo_editor_seekbar_padding_top" android:paddingBottom="@dimen/photo_editor_seekbar_padding_top" android:layout_width="0.0dip" android:layout_height="wrap_content" android:paddingStart="@dimen/photo_editor_seekbar_padding_start" android:paddingEnd="@dimen/photo_editor_seekbar_padding_end" app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_50" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_weight="0.8" app:layout_constraintStart_toEndOf="@id/text_edit_dialog_tab_style_transparent_title" app:layout_constraintTop_toTopOf="@id/guideline_horizontal_50" />
    <TextView android:textSize="@dimen/text_edit_dialog_tab_text_size" android:textColor="@color/text_edit_dialog_tab_color" android:id="@id/text_edit_dialog_tab_style_shadow" android:background="@null" android:paddingTop="@dimen/text_edit_dialog_bottom_text_padding_vertical" android:paddingBottom="@dimen/text_edit_dialog_bottom_text_padding_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/text_edit_dialog_style_shadow" android:drawablePadding="@dimen/text_edit_dialog_tab_drawable_padding" android:drawableStart="@drawable/text_edit_dialog_tab_icon_shadow" android:paddingStart="@dimen/text_edit_dialog_bottom_text_padding_horizontal" android:paddingEnd="@dimen/text_edit_dialog_bottom_text_padding_horizontal" app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_75" app:layout_constraintEnd_toEndOf="@id/guideline_vertical_18" app:layout_constraintStart_toStartOf="@id/guideline_vertical_18" app:layout_constraintTop_toTopOf="@id/guideline_horizontal_75" />
    <TextView android:textSize="@dimen/text_edit_dialog_tab_text_size" android:textColor="@color/text_edit_dialog_tab_color" android:id="@id/text_edit_dialog_tab_style_align" android:background="@null" android:paddingTop="@dimen/text_edit_dialog_bottom_text_padding_vertical" android:paddingBottom="@dimen/text_edit_dialog_bottom_text_padding_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/text_edit_dialog_style_align_left" android:drawablePadding="@dimen/text_edit_dialog_tab_drawable_padding" android:layout_centerHorizontal="true" android:drawableStart="@drawable/text_edit_dialog_tab_icon_align_left" android:paddingStart="@dimen/text_edit_dialog_bottom_text_padding_horizontal" android:paddingEnd="@dimen/text_edit_dialog_bottom_text_padding_horizontal" app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_75" app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50" app:layout_constraintStart_toStartOf="@id/guideline_vertical_50" app:layout_constraintTop_toTopOf="@id/guideline_horizontal_75" />
    <TextView android:textSize="@dimen/text_edit_dialog_tab_text_size" android:textColor="@color/text_edit_dialog_tab_color" android:id="@id/text_edit_dialog_tab_style_bold" android:background="@null" android:paddingTop="@dimen/text_edit_dialog_bottom_text_padding_vertical" android:paddingBottom="@dimen/text_edit_dialog_bottom_text_padding_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/text_edit_dialog_style_bold" android:drawablePadding="@dimen/text_edit_dialog_tab_drawable_padding" android:drawableStart="@drawable/text_edit_dialog_tab_icon_bold" android:paddingStart="@dimen/text_edit_dialog_bottom_text_padding_horizontal" android:paddingEnd="@dimen/text_edit_dialog_bottom_text_padding_horizontal" android:layout_alignParentEnd="true" app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_75" app:layout_constraintEnd_toEndOf="@id/guideline_vertical_82" app:layout_constraintStart_toStartOf="@id/guideline_vertical_82" app:layout_constraintTop_toTopOf="@id/guideline_horizontal_75" />
</android.support.constraint.ConstraintLayout>